--- a/css/style2.css
+++ b/css/style2.css
@@ -1,5 +1,5 @@
 /* CSS Reset*/
-body, header, nav, main, footer, h1, div, img, ul, figure, figcaption, section, article, aside, audio, video{
+body, header, nav, main, footer, h1, div, img, ul, figure, figcaption, section, article, aside, audio, video,form{
 	margin: 0;
 	padding:0;
 	border: 0;
@@ -62,6 +62,9 @@ nav li a{
 
 	/* Show mobile class, hide tablet-desktop class*/
 .mobile{
+	display: block;
+}
+.mobile-contact{
 	display: block;
 }
 
@@ -156,6 +159,12 @@ footer p a{
 	position: relative;
 	max-width: 450px;
 	margin: 2%;
+}
+
+.map{
+	border: 8px solid #000;
+	width:95%;
+	height: 50%;
 }
 
 
@@ -270,6 +279,35 @@ footer p a{
 		margin:0 auto;
 	}
 	
+
+	/* Add a hover effect if you want */
+	.fa:hover {
+  opacity: 0.7;
+	}
+	
+	.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 45px;
+  text-align: left;
+	}
+
+	/* Set a specific color for each brand */
+
+	/* Facebook */
+	.fa-facebook {
+  background: #3B5998;
+  color: white;
+  padding:5px;
+	}
+
+	/* Twitter */
+	.fa-twitter {
+  background: #55ACEE;
+  color: white;
+  padding:5px;
+	}
+	
 }
 
 /* Media query for desktop viewport */
@@ -348,8 +386,17 @@ footer p a{
 		grid-gap: 20px;
 	}
 	
-	.btn{
-		grid-column: 1 / span 3;
+	.btn2{
+		grid-column: 1 / span 2;
 	}
+	.btn1{
+		grid-column: 1/ span 3;
+	}
+	
+	.map{
+	border: 8px solid #616161;
+	width:50%;
+	height: 23%;
+}
 
 }
